[tool.poetry]
name = "pydatasteps"
version = "0.1.0"
description = "Define steps for simple data processing"
authors = ["Eric McCowan <ericrmc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
